--- a/app/src/main/res/layout/activity_sensor_list.xml
+++ b/app/src/main/res/layout/activity_sensor_list.xml
@@ -6,6 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <!-- Tu możesz dodać layout do wyświetlania kafelków z sensorami -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewSensors"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"
+        android:padding="16dp" />
+
 
     <!-- Przycisk dodawania sensora (FloatingActionButton) -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
