--- a/app/src/main/res/layout/activity_sensor_list.xml
+++ b/app/src/main/res/layout/activity_sensor_list.xml
@@ -10,7 +10,7 @@
         android:id="@+id/recyclerViewSensors"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="120dp"
         android:padding="16dp" />
 
 
@@ -22,7 +22,7 @@
         android:layout_gravity="end|bottom"
         android:layout_margin="50dp"
         android:tint="@color/white"
-        android:backgroundTint="#817777"
+        android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/add_sensor"
         android:src="@drawable/baseline_add_24"
         app:tint="@color/kindablue"
