everything works lol x2

--- a/app/src/main/res/layout/activity_sensor_detail.xml
+++ b/app/src/main/res/layout/activity_sensor_detail.xml
@@ -61,6 +61,14 @@
         android:layout_gravity="center"
         android:layout_marginTop="32dp"/>
 
+    <!-- Przycisk Myspisosal -->
+    <Button
+        android:id="@+id/buttonMyDisposals"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="My disposals"
+        android:layout_gravity="center"
+        android:layout_marginTop="32dp"/>
 
 
 
